--- a/page.html
+++ b/page.html
@@ -18,30 +18,30 @@
 </header>
 
 <main class="p-6">
-  <div class="bg-white p-6 rounded-lg shadow-md text-center">
-    <h2 id="welcome-name" class="text-2xl font-bold mb-4">مرحباً!</h2>
+  <div class="bg-white rounded-lg shadow-md p-6">
+    <h2 id="studentName" class="text-2xl font-bold mb-2">جارٍ التحميل...</h2>
+    <p id="studentEmail" class="text-gray-600 mb-4"></p>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
-      <a href="courses.html" class="bg-blue-100 hover:bg-blue-200 text-blue-800 p-4 rounded-lg flex items-center justify-center gap-2">
+    <div class="mt-6 flex flex-wrap gap-4">
+      <a href="courses.html" class="bg-blue-100 hover:bg-blue-200 text-blue-800 px-4 py-2 rounded-lg flex items-center gap-2">
         <i class="fas fa-book"></i> المقررات
       </a>
-      <a href="grades.html" class="bg-green-100 hover:bg-green-200 text-green-800 p-4 rounded-lg flex items-center justify-center gap-2">
+      <a href="grades.html" class="bg-green-100 hover:bg-green-200 text-green-800 px-4 py-2 rounded-lg flex items-center gap-2">
         <i class="fas fa-graduation-cap"></i> الدرجات
       </a>
-      <a href="schedule.html" class="bg-purple-100 hover:bg-purple-200 text-purple-800 p-4 rounded-lg flex items-center justify-center gap-2">
+      <a href="schedule.html" class="bg-purple-100 hover:bg-purple-200 text-purple-800 px-4 py-2 rounded-lg flex items-center gap-2">
         <i class="fas fa-calendar-alt"></i> الجدول الدراسي
       </a>
     </div>
   </div>
 </main>
 
-<!-- مكتبات -->
+<!-- مكتبات فايربيس -->
 <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 
 <script>
+  // إعداد فايربيس
   const firebaseConfig = {
     apiKey: "AIzaSyAoh8yHCClXB9n-iv8e-nWuagKvRUG9IPw",
     authDomain: "sudan-auto-hub.firebaseapp.com",
@@ -50,33 +50,56 @@
     messagingSenderId: "918396323666",
     appId: "1:918396323666:web:2fcb9092f87217652bdc8b"
   };
+
   firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
 
-  const userId = localStorage.getItem('userId');
+  // تحميل بيانات المستخدم من localStorage
+  window.addEventListener('DOMContentLoaded', () => {
+    const name = localStorage.getItem('userName');
+    const email = localStorage.getItem('userEmail');
 
-  if (!userId) {
-    window.location.href = 'index.html';
-  } else {
-    firebase.firestore().collection('users').doc(userId).get()
-      .then((doc) => {
-        if (doc.exists) {
-          const userData = doc.data();
-          document.getElementById('welcome-name').textContent = `مرحباً، ${userData.name}!`;
-        } else {
-          console.log("لا توجد بيانات للمستخدم");
-        }
-      })
-      .catch((error) => {
-        console.error("حدث خطأ:", error);
-      });
-  }
+    if (name) {
+      document.getElementById('studentName').innerText = `مرحباً ${name}`;
+    } else {
+      document.getElementById('studentName').innerText = 'مرحباً بك';
+    }
 
-  const logoutBtn = document.getElementById('logout-btn');
-  logoutBtn.addEventListener('click', function() {
-    firebase.auth().signOut().then(() => {
-      localStorage.removeItem('userId');
-      window.location.href = 'login.html';
+    if (email) {
+      document.getElementById('studentEmail').innerText = email;
+    }
+  });
+
+  // زر تسجيل الخروج
+  document.getElementById('logout-btn').addEventListener('click', () => {
+    Swal.fire({
+      title: 'تأكيد تسجيل الخروج',
+      text: "هل أنت متأكد أنك تريد تسجيل الخروج؟",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'نعم، تسجيل الخروج'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        auth.signOut().then(() => {
+          // حذف بيانات المستخدم من localStorage
+          localStorage.removeItem('userName');
+          localStorage.removeItem('userEmail');
+          window.location.href = 'index.html'; // إعادة توجيه لصفحة تسجيل الدخول
+        }).catch(error => {
+          console.error("خطأ أثناء تسجيل الخروج:", error);
+        });
+      }
     });
+  });
+
+  // التحقق من تسجيل الدخول
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      // إذا لم يتم تسجيل دخول، توجيه المستخدم لصفحة الدخول
+      window.location.href = "index.html";
+    }
   });
 </script>
 
