--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <form id="login-form" class="space-y-4">
     <div>
       <label class="block mb-1 text-gray-700">البريد الإلكتروني</label>
-      <input type="email" name="email" required class="w-full px-4 py-2 border rounded-lg">
+      <input type="email" id="email" required class="w-full px-4 py-2 border rounded-lg">
     </div>
     <div>
       <label class="block mb-1 text-gray-700">كلمة المرور</label>
-      <input type="password" name="password" required class="w-full px-4 py-2 border rounded-lg">
+      <input type="password" id="password" required class="w-full px-4 py-2 border rounded-lg">
     </div>
 
     <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-2 rounded-lg">
@@ -41,12 +41,12 @@
   </p>
 </div>
 
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
 
 <script>
+  // إعداد فايربيس
   const firebaseConfig = {
     apiKey: "AIzaSyAoh8yHCClXB9n-iv8e-nWuagKvRUG9IPw",
     authDomain: "sudan-auto-hub.firebaseapp.com",
@@ -55,24 +55,38 @@
     messagingSenderId: "918396323666",
     appId: "1:918396323666:web:2fcb9092f87217652bdc8b"
   };
+
   firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
 
-  const loginForm = document.getElementById('login-form');
-  loginForm.addEventListener('submit', function (e) {
+  // حدث عند الضغط على زر الدخول
+  document.getElementById('login-form').addEventListener('submit', async (e) => {
     e.preventDefault();
-    const email = loginForm.email.value;
-    const password = loginForm.password.value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
-    firebase.auth().signInWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        const user = userCredential.user;
-        localStorage.setItem('userId', user.uid);
-        window.location.href = 'page.html';
-      })
-      .catch((error) => {
-        Swal.fire('خطأ', 'البريد الإلكتروني أو كلمة المرور غير صحيحة',  'error');
-      });
+    try {
+      const userCredential = await auth.signInWithEmailAndPassword(email, password);
+      const userId = userCredential.user.uid;
+
+      // جلب بيانات المستخدم من قاعدة البيانات
+      const doc = await db.collection('students').doc(userId).get();
+      if (doc.exists) {
+        const userData = doc.data();
+        localStorage.setItem('userName', userData.name); // حفظ الاسم
+        localStorage.setItem('userEmail', userData.email); // حفظ الإيميل (لو تحتاجه لاحقاً)
+        // الانتقال إلى الصفحة الرئيسية
+        window.location.href = "home.html";
+      } else {
+        Swal.fire('خطأ', 'لا توجد بيانات مستخدم مسجلة.', 'error');
+      }
+
+    } catch (error) {
+      Swal.fire('خطأ', error.message, 'error');
+    }
   });
 </script>
+
 </body>
 </html>
