--- a/page.html
+++ b/page.html
@@ -21,12 +21,27 @@
   <div class="bg-white rounded-lg shadow-md p-6 text-center">
     <h2 id="studentName" class="text-2xl font-bold mb-4">جارٍ التحميل...</h2>
 
-    <div class="flex justify-center gap-4 mt-6">
-      <a href="courses.html" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg text-lg">المقررات</a>
-      <a href="grades.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg text-lg">الدرجات</a>
-      <a href="schedule.html" class="bg-purple-500 hover:bg-purple-600 text-white px-6 py-3 rounded-lg text-lg">الجدول الدراسي</a>
-    </div>
-  </div>
+   <div class="flex justify-center gap-4 mt-6 flex-wrap">
+  <a href="courses.html" class="flex items-center gap-2 bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg text-lg">
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135789.png" alt="مقررات" class="w-6 h-6">
+    المقررات
+  </a>
+
+  <a href="grades.html" class="flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg text-lg">
+    <img src="https://cdn-icons-png.flaticon.com/512/992/992700.png" alt="درجات" class="w-6 h-6">
+    الدرجات
+  </a>
+
+  <a href="schedule.html" class="flex items-center gap-2 bg-purple-500 hover:bg-purple-600 text-white px-6 py-3 rounded-lg text-lg">
+    <img src="https://cdn-icons-png.flaticon.com/512/1828/1828843.png" alt="جدول" class="w-6 h-6">
+    الجدول الدراسي
+  </a>
+
+  <a href="profile.htm" class="flex items-center gap-2 bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg text-lg">
+    <img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="ملف شخصي" class="w-6 h-6">
+    الملف الشخصي
+  </a>
+</div>
 </main>
 
 <!-- مكتبات فايربيس -->
