--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         localStorage.setItem('userName', userData.name); // حفظ الاسم
         localStorage.setItem('userEmail', userData.email); // حفظ الإيميل (لو تحتاجه لاحقاً)
         // الانتقال إلى الصفحة الرئيسية
-        window.location.href = "home.html";
+        window.location.href = "page.html";
       } else {
         Swal.fire('خطأ', 'لا توجد بيانات مستخدم مسجلة.', 'error');
       }
